https://github.com/rreganjr/Requel/issues/32
updates for moving to java 17 and some maven cleanup,

A bunch of new Integer(result) => Integer.valueOf(result)

in maven use the toolchain plugin to look up which jdk to use from ~/.m2/toolchains.xml see doc/MAVEN_TOOLCHAINS.md for details