@@ -206,7 +206,7 @@ public class ScenarioImpl extends StepImpl implements Scenario {
 
 		@Override
 		public Long unmarshal(String id) throws Exception {
-			return null; // new Long(id.substring(prefix.length()));
+			return null; // Long.valueOf(id.substring(prefix.length()));
 		}
 
 		@Override
